--- a/entradas_com/app/templates/auth/login-signup.html
+++ b/entradas_com/app/templates/auth/login-signup.html
@@ -69,7 +69,7 @@
 		<!--tabs for login/signup-->
         <div class="container">
             <div  id="register-container" class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                <ul class="nav nav-tabs">
+                <ul class="nav nav-tabs" style="margin-bottom:10px">
                     <li id="login-li" class="active"><a data-toggle="tab" href="#login-content">Log in</a></li>
                     <li id="signup-li"><a data-toggle="tab" href="#signup-content">Sign up</a></li>
                 </ul>
