--- a/entradas_com/app/static/css/custom/search-results.css
+++ b/entradas_com/app/static/css/custom/search-results.css
@@ -52,16 +52,30 @@
     box-shadow: 0px 3px 0px rgba(255,255,255,0.3);
 }
 
+#dropbtn .caret {
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-top: 7px solid white;
+}
+
 /* Responsive Styles */
 
 @media(max-width:991px) {
     .search-container{
         width:690px;
     }
+    
+    
 }
 
 @media(max-width:767px) {
     .search-container{
         width: 90%;
+    }
+}
+
+@media(min-width:2px) {
+    #search-container{
+        top:18%;
     }
 }
