--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -39,16 +39,16 @@
 	<body>
 		{% block content %}
 
-    <!-- Navigation -->
+     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-static-top main-navbar">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="../">
+                <a class="navbar-brand" href="{{ url_for('main.index')}}">
                     <img class="brand-logo img-responsive" alt="Brand" src="{{ url_for('static', filename='img/entradascomlogo.png') }}">
                 </a>
-                <a href="{{ url_for('auth.signup') }}">
+                <a href="{{ url_for('auth.signup') }}" style="color:black">
                 <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item login-option mobile">
-                    <span class="glyphicon glyphicon-user">
+                    <span class="glyphicon glyphicon-user"></span>
                 </button>
                 </a>
                 <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item logged sign-out mobile">
@@ -61,11 +61,11 @@
 
                 <li>
                     <!-- Trigger the modal with a button -->
-                    <a href="{{ url_for('auth.signup') }}">
+                    
                     <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop">
-                        <span class="glyphicon glyphicon-user"></span>Entrar
+                        <a style="text-decoration:none;color:black" href="{{ url_for('auth.signup') }}"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Entrar</a>
                     </button>
-                    </a>
+                    
                 </li>
 
                 <!-- Exit button -->
@@ -257,6 +257,7 @@
 
     <!-- own JavaScript -->
     <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/searchbar.js') }}"></script>
     <script src="{{ url_for('static', filename='js/login-signup.js') }}"></script>
 
         
