--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -34,16 +34,17 @@
 <body>
 
     <!-- Navigation -->
-
     <nav class="navbar navbar-default navbar-static-top main-navbar">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="../">
+                <a class="navbar-brand" href="{{ url_for('main.index')}}">
                     <img class="brand-logo img-responsive" alt="Brand" src="{{ url_for('static', filename='img/entradascomlogo.png') }}">
                 </a>
-                <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item login-option mobile" data-toggle="modal" data-target="#signup-modal">
-                    <span class="glyphicon glyphicon-user">
+                <a href="{{ url_for('auth.signup') }}" style="color:black">
+                <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item login-option mobile">
+                    <span class="glyphicon glyphicon-user"></span>
                 </button>
+                </a>
                 <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item logged sign-out mobile">
                     <span class="glyphicon glyphicon-off">
                 </button>
@@ -54,14 +55,16 @@
 
                 <li>
                     <!-- Trigger the modal with a button -->
-                    <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop" data-toggle="modal" data-target="#signup-modal">
-                        <span class="glyphicon glyphicon-user"></span>Entrar
+                    
+                    <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop">
+                        <a style="text-decoration:none;color:black" href="{{ url_for('auth.signup') }}"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Entrar</a>
                     </button>
+                    
                 </li>
 
                 <!-- Exit button -->
 
-                <li><p class="navbar-text navbar-right navbar-item logged desktop" style="color: white">¡Hola, <a href="#" class="navbar-link" style="color: white"> asdhfad </a>!</p></li>
+                <li><p class="navbar-text navbar-right navbar-item logged desktop" style="color: white">¡Hola, <a id="user-name-link" href="#" class="navbar-link" style="color: white"></a>!</p></li>
                 <li>
                     <button type="button" class="btn btn-yellow navbar-btn last-navbar-item logged sign-out desktop">
                         <span class="glyphicon glyphicon-off"></span>Salir
@@ -71,81 +74,6 @@
 
         </div>
     </nav>
-
-    <!-- Sign up modal -->
-
-    <!-- Modal -->
-    <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="signup-dialog">
-        <div class="modal-dialog" role="document">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Sólo a un paso de las mejores condiciones</h4>
-                </div>
-                <div class="modal-body">
-                    <ul class="nav nav-pills">
-                        <!-- Sign up tab-->
-                        <li id="signup-tab" class="active">
-                            <a href="#" class="signup-link">Sign up</a>
-                        </li>
-                        <!-- Sign in tab -->
-                        <li id="login-tab">
-                            <a href="#" class="login-link">Log in</a>
-                        </li>
-                    </ul>
-
-
-                    <!-- When signing in -->
-                    <form id="signup-form" class="signup-field" role="form">
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Usuario:</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="pwd">Contraseña:</label>
-                            <input type="password" class="form-control" id="pwd">
-                        </div>
-                        <div class="form-group">
-                            <label for="pwd-confirm">Confirmar contraseña:</label>
-                            <input type="password" class="form-control" id="pwd-confirm">
-                        </div>
-                        <div class="checkbox">
-                            <label><input type="checkbox">Recuérdame</label>
-                        </div>
-                    </form>
-
-                    <!-- When logging in -->
-                    <form id="login-form" class="login-field" role="form">
-                        <div class="form-group">
-                            <label for="email">Usuario o email:</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="pwd">Password:</label>
-                            <input type="password" class="form-control" id="pwd">
-                        </div>
-                        <div class="checkbox">
-                            <label><input type="checkbox"> Recuérdame</label>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-success login signup-field" data-dismiss="modal">
-                        <span class="glyphicon glyphicon-user"></span> Sign Up
-                    </button>
-                    <button type="submit" class="btn btn-success login login-field" data-dismiss="modal">
-                        <span class="glyphicon glyphicon-log-in"></span> Log in
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Search bar -->
 
@@ -300,6 +228,7 @@
 
     <!-- own JavaScript -->
     <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/searchbar-transparent.js') }}"></script>
     <script src="{{ url_for('static', filename='js/search-results.js') }}"></script>
 
 </body>
