--- a/entradas_com/app/templates/auth/login-signup.html
+++ b/entradas_com/app/templates/auth/login-signup.html
@@ -70,12 +70,12 @@
         <div class="container">
             <div  id="register-container" class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <ul class="nav nav-tabs" style="margin-bottom:10px">
-                    <li id="login-li" class="active"><a data-toggle="tab" href="#login-content">Log in</a></li>
-                    <li id="signup-li"><a data-toggle="tab" href="#signup-content">Sign up</a></li>
+                    <li id="login-li"><a data-toggle="tab" href="#login-content">Log in</a></li>
+                    <li id="signup-li" class="active"><a data-toggle="tab" href="#signup-content">Sign up</a></li>
                 </ul>
                 <!--displayed stuff for each of tabs-->
                 <div class="tab-content">
-                  <div id="login-content" class="tab-pane fade in active">
+                  <div id="login-content" class="tab-pane fade">
                     <form type="login" id="login-form" class="login-field" role="form" method="post" name="Login">
                         <div id="login-mail-div" class="form-group has-feedback">
                             <label for="email">Email o usuario:</label>
@@ -92,12 +92,12 @@
                         <div class="checkbox">
                             <label><input type="checkbox"> Recuérdame</label>
                         </div>
-                        <button id="login-form-btn" type="Submit" class="btn btn-success login login-field" data-dismiss="modal"onclick="changename(1)" disabled>
+                        <button id="login-form-btn" type="Submit" class="btn btn-success login login-field" data-dismiss="modal"onclick="changename(1)"  style="float:right" disabled>
                             <span class="glyphicon glyphicon-log-in"></span> Log in
                         </button>
                     </form> 
                   </div>
-                  <div id="signup-content" class="tab-pane fade">
+                  <div id="signup-content" class="tab-pane fade in active">
                       <form action="{{ url_for('main.signup') }}" type="signup" id="signup-form" class="signup-field" role="form" method="post" name="Signup">
                             <div id="sign-mail-div" class="form-group has-feedback">
                                 <label for="email">Email:</label>
@@ -124,7 +124,7 @@
                                 <span id="inputSuccess3Status" class="sr-only">(success)</span>
                             </div>
                             <div class="checkbox"><label><input type="checkbox">Recuérdame</label></div>
-                            <button id="signup-form-btn" type="Submit" class="btn btn-success login signup-field" data-dismiss="modal"onclick="changename(0)" disabled>
+                            <button id="signup-form-btn" type="Submit" class="btn btn-success login signup-field" data-dismiss="modal"onclick="changename(0)" style="float:right" disabled>
                                 <span class="glyphicon glyphicon-user"></span> Sign Up
                             </button>
                         </form>
