--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -237,7 +237,7 @@
             </div>
           </div>
             <ul class='col-lg-4' style="list-style-type:none;margin:0;padding:0;">
-                <li class="footitem"><a href="#" style="color:black"> Condiciones de uso</a></li>
+                <li class="footitem"><a href="404.html" style="color:black"> Condiciones de uso</a></li>
                 <li class="footitem"><a href="#" style="color:black"> Política de privacidad</a></li>
             </ul>
             <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Leganés</p>
