FIX cat img not showing; footers now complete; redirect 404 to home

--- a/entradas_com/app/templates/auth/login-signup.html
+++ b/entradas_com/app/templates/auth/login-signup.html
@@ -137,6 +137,9 @@
         <!-- Footer -->
         <footer class="footer"> 
             <div class="row row-mod" align="center">
+                <div class="col-lg-4" style="margin-top:0px">
+                <a href="#"><img style="width:150px; padding-bottom:10px" src="{{ url_for('static', filename='img/entradascomlogo.png') }}"> </a>
+              </div>
               <div class="col-lg-4" style="margin-top:10px; padding-bottom:10px">
                 <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
                   <a href="#" style="color:black"> <i class="fa fa-facebook-square fa-3x"></i></a>
