--- a/entradas_com/app/templates/404.html
+++ b/entradas_com/app/templates/404.html
@@ -71,13 +71,16 @@
             <img style="height:250px;width:250px"src="{{ url_for( 'static', filename='img/yes.gif') }}">
             <h1>Oops!</h1>
             <h4>Ha surgido un error inesperado.</h4>
-            <a href="{{ 'main.index' }}">Pincha aquí para volver a la portada</a>
+            <a href="{{ url_for( 'main.index' ) }}">Pincha aquí para volver a la portada</a>
         </div>
         
         
         <!-- Footer -->
         <footer class="footer"> 
             <div class="row row-mod" align="center">
+                <div class="col-lg-4" style="margin-top:0px">
+                <a href="#"><img style="width:150px; padding-bottom:10px" src="{{ url_for('static', filename='img/entradascomlogo.png') }}"> </a>
+              </div>
               <div class="col-lg-4" style="margin-top:10px; padding-bottom:10px">
                 <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
                   <a href="#" style="color:black"> <i class="fa fa-facebook-square fa-3x"></i></a>
