Redirect to event detail

--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -159,7 +159,7 @@
                     <i class="fa fa-money fa-fw" aria-hidden="true"></i>Desde {{events[i].price}}€
                 </p>
                 <p class="card-body">
-                    <a href="#" class="btn btn-warning" role="button">Información + Comprar entradas</a>
+                    <a href="{{ url_for('event.event', id=42) }}" class="btn btn-warning" role="button">Información + Comprar entradas</a>
                 </p>
             </div>
         </div>
