--- a/entradas_com/app/static/css/custom/header-carousel.css
+++ b/entradas_com/app/static/css/custom/header-carousel.css
@@ -1,34 +1,19 @@
 /* Home Page Carousel */
 
 #header-carousel {
-    z-index: -3;
-}
-
-header.carousel {
+    z-index: -100;
     height: 82%;
-}
-
-header.carousel .item,
-header.carousel .item.active,
-header.carousel .carousel-inner {
-    height: 100%;
-}
-
-header.carousel .fill {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+    overflow: hidden;
 }
 
 @media(max-width:991px) {
-    header.carousel {
+    #header-carousel {
         height: 50%;
     }
 }
 
 @media(max-width:767px) {
-    header.carousel {
+    #header-carousel {
         height: 35%;
     }
 }
